# Quantitative-Microbial-Risk-Assessment

./: .gitignore  BATCH_PROCESSING_INPUTS_GUIDE.md  COMPLETE_UPDATE_VERIFICATION.md  Critical Changes Implemented.docx  DEMO_PROJECT_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  EMAIL_TO_DAVID.txt  EXCEL_COMPLETE_ANALYSIS.txt  EXCEL_PYTHON_VERIFIED_COMPARISON.md  EXCEL_REPLICATION_VERIFICATION.md  EXCEL_VALIDATION_SUMMARY.md  EXCEL_VS_PYTHON_GAP_ANALYSIS.md  FINAL_COMPREHENSIVE_CHECKLIST.md  FINAL_EXCEL_REPLICATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  Improved_NIWA_QMRA_SIP_Proposal_with_Citations.docx  NIWA QMRA report.docx  NIWA_QMRA_SIP_Proposal_Updated.docx  NOROVIRUS_PRODUCTION_APP_SUMMARY.md  PHASE_1_AND_2_IMPLEMENTATION_COMPLETE.md  PROJECT_OVERVIEW.md  QMRA.txt  QMRA_Application_User_Guide.docx  QMRA_Batch_App_Guide.docx  QMRA_IMPROVEMENTS_SUMMARY.md  QMRA_Shellfish_191023_Nino_SUMMER.xlsx  QMRA_Simple_Demo_NO_TEMPLATE.docx  QMRA_TOOLKIT_USER_GUIDE.md  QMRA_Toolkit_Technical_Demonstration.docx  QMRA_User_Guide_NIWA_Format.docx  QMRA_User_Guide_Professional.docx  README.md  RESPONSE_TO_DAVID.md  Revised_NIWA_QMRA_SIP_Proposal.docx  SCREENSHOT_CAPTURE_CHECKLIST.md  SCREENSHOT_CHECKLIST.md  SIP_QMRA.docx  SIP_QMRA_Final_V2.docx  VERIFICATION_SUMMARY.md  analyze_excel_qmra.py  (+33 more)
.claude/: settings.local.json
Batch_Processing_App/: BEST_PRACTICES_GUIDE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  DISTRIBUTION_PARAMETERS_GUIDE.md  LATEX_README.md  QMRA_Application_Overview_with_screenshots.docx  QMRA_Batch_Demo.tex  README.md  SCREENSHOT_AUTOMATION_SETUP.txt  SCREENSHOT_INSTRUCTIONS.md  SIMPLE_EXAMPLE.py  batch_processor.py  capture_app_screenshots.py  compile_latex_demo.bat  demo_screenshot_usage.py  launch_web_gui.bat  pdf_report_generator.py  requirements.txt  run_batch_assessment.py  run_simple_qmra.py  test_custom_distributions.py  test_distributions.py  test_library_approach.py  test_new_features.py  test_pdf_plots.py  test_plot_review.py  test_simplified_approach.py  test_web_app_final.py  test_web_app_library.py  verify_dose_response.py  web_app.py
From_David/: DESCRIPTION  Draft_QMRA_Shellfish_191023.xlsx  Draft_QMRA_Swim_Nina_AllYear_091023.xlsx  NAMESPACE  QMRA_Inhalation_Nina_Existing_230323.xlsx  QMRA_Shellfish_191023_Nino_SUMMER.xlsx  QMRA_Swim_191023_Nina_ALLYEAR.xlsx  conceptual_outline.nb - Copy.html
NZ_Consultancy_Project_2025/: PROJECT_INDEX.md
QMRA_Literature_Database/: README.md  fetch_qmra_papers.py  qmra_papers.json  qmra_papers.ris  qmra_papers_summary.txt
QMRA_Norovirus_Production_App/: CLEANUP_SUMMARY.md  INPUT_DATA_CLEANUP_SUMMARY.md  README_NOROVIRUS.md  capture_screenshots_automated.bat
data/: QMRA.enl
docs/: NIWA_QMRA_SIP_Final_with_Diagram.docx  QMRA_Research_Document_20250918.docx  QMRA_SIP_Final_RW_Addressed_20250925_0809.docx
qmra-master/: .gitignore  DESCRIPTION  NAMESPACE  README.md
qmra_toolkit/: .gitignore  COMPLETE_GUIDE.md  ENHANCED_FEATURES.md  INSTALL.bat  Launch_Enhanced_QMRA_GUI.bat  Launch_QMRA_GUI.bat  Launch_Web_App.bat  PROJECT_STRUCTURE.md  QMRA_Assessment_norovirus_20251006_1341.docx  QMRA_TOOLKIT_SUMMARY.md  README.md  WEB_APP_README.md  WHATS_NEW.md  create_workflow_diagram.py  generate_manual_pdf.py  install.py  launch_enhanced_gui.py  launch_gui.py  requirements.txt  requirements_web.txt  treatment_config.yaml  wastewater_treatment.yaml  web_app.py
screenshots_example/: README.md
(+370 files in other folders)
